--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,33 +1,42 @@
-<div class="container px-5 px-sm-0">
-           <div class="row">
-              <div class="col-md-3">
-                <h2>User info</h2>
-                <%= image_tag @user.get_profile_image(100,100) %>
-                <table class="table">
-                  <tbody>
-                    <tr></tr>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <h2>User info</h2>
+              <%= image_tag @user.get_profile_image(100,100) %>
+              <table class="table table-striped">
+                <tbody>
                     <tr><th>name</th><th><%= @user.name %></th></tr>
                     <tr><th>introduction</th><th></th></tr>
-                  </tbody>
-                </table>
-                <div class="row">
-                    <% if @user == current_user.id %>
-                        <%= f.submit edit_user_path(@user) %>
-                          <i class="fa-solid fa-user-gear"></i>
-                    <%end%>
-                </div>
-                
-                
-                <h2 class="mt-3">New book</h2>
+                </tbody>
+              </table>
+              <% if @user=current_user.id %>
+                  <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-secondary" %>
+              <%end%>
+              <h2 class="mt-3">New book</h2>
+                    <% if @book.errors.any? %>
+                      <%= @book.errors.count %>errors prohibited this obj from being saved:
+                      <ul>
+                        <% @book.errors.full_messages.each do |message| %>
+                          <li><%= message %></li>
+                        <%end %>
+                      </ul>
+                    <% end %>
                 <%= form_with model: @book do |f| %>
-                  <h4>Title</h4>
-                  <%= f.text_field :title %>
-                  <h4>Opinion</h4>
-                  <%= f.text_area :body %>
-                  <%= f.submit 'Create book' %>
+                 <div class="form group">
+                   <label for=book_title>Title</label>
+                   <%= f.text_field :title %>
+                 </div>
+                 <div class="form group">
+                   <label for=book_opinion>Opinion</label>
+                   <%= f.text_area :body %>
+                 </div>
+                 <div class="form group">
+                   <%= link_to 'Create book', books_path ,class: "btn btn-success"%>
+                 </div>
                 <% end %>
-             </div>
-          </div>
+        </div>
+    </div>
 </div>
-<div class="col-md-8 offset-md-1">
-</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
