--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,22 +7,20 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-                <h2>User info</h2>
+                <h2>Editing Book</h2>
                       <%= form_with model: @user do |f| %>
                         <div class="form group">
-                          <label for="inputName">Name</label><br>
-                          <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+                          <label for="book_title">Title</label><br>
+                          <%= f.text_field :title, autofocus: true, id:"book_title" %>
                         </div>
                         <div class="form group">
-                          <label for="inputImage">Image</label><br>
-                          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+                          <label for="book_opinion">Opinion</label><br>
+                          <%= f.text_area :body, autofocus: true %>
                         </div>
-                        <div class="form group">
-                          <label for="inputName">Introduction</label><br>
-                          <%= f.text_area :name, autofocus: true, placeholder:"説明"%>
-                        </div>
-                        <%= link_to 'Update User', user_path(@user.id),  class: "btn btn-secondary"%>
+                        <%= link_to 'Update Book', book_path,  class: "btn btn-success"%>
                       <% end %>
+                      <%= link_to 'Show', book_path %>
+                      <%= link_to 'Back', books_path %>
               </div>
             </div>
           </div>
