--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,52 @@
-<div>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p>name：<%= @book.user.name %></p>
-  <p>title：<%= @book.title %></p>
-  <p>opinion：<%= @book.body %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "削除", book_path(@book), method: :delete %>
-  <% end %>
-</div>
+<!DOCTYPE html>
+<html lang="ja">
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
+    <body>
+        <main>
+            <p id="notice"></p>
+            <div class="container px-5 px-sm-0">
+                <div class="row">
+                    <div class="col-md-3">
+                      <%= render 'list', books: @books %>
+                    </div>
+                    <div class="col-md-8 offset-md-1">
+                     <% @books.each do |book| %>
+                      <h2>Book detail</h2>
+                         <table class="table table-hover table-inverse">
+                           <thead>
+                             <tr>
+                               <th></th>
+                               <th>Title<br>
+                               <th>Opinion</th>
+                               <th colspan="3"></th>
+                             </tr>
+                           </thead>
+                           <tbody>
+                             <tr>
+                               <td></td>
+                               <td><%= book.title %></td>
+                               <td><%= book.body %></td>
+                               <% if @user=current_user.id %>
+                                <td><%= link_to 'Edit', edit_book_path, class: "btn btn-sm btn-success" %></td>
+                                <td><%= link_to 'Destroy', method: :delete, class: "btn btn-sm btn-danger" %></td>
+                               <%end%>
+                             </tr>
+                           </tbody>
+                         </table>
+                     <%end%>
+                    </div>
+                </div>
+            </div>
+        </main>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </body>
+    <footer>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="mx-auto"><p>CopyRight Infratop.inc</p></div>
+          </div>
+        </div>
+    </footer>
+</html>
