--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,37 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Bookers2Ver2</title>
-        <meta name="csrf-param" content="authenticity_token">
-        <meta name="csrf-token">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
-        <style type="text/css"></style>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    </head>
     <body>
-       <header>
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <span>Bookers</span>
-                </a>
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto">
-                        <li><a class="nav-link text-light" href="/users/:id"><i class="fa-solid fa-house"></i>Home</a></li>
-                        <li><a class="nav-link text-light" href="/homes/about"><i class="fa-solid fa-link"></i>About</a></li>
-                        <li><a class="nav-link text-light" href="/users/sign_up"><i class="fa-solid fa-user-plus"></i>Sign up</a></li>
-                        <li><a class="nav-link text-light" href="/users/sign_in"><i class="fa-solid fa-right-to-bracket"></i>Log in</a></li>
-                   </ul>
-                </div>
-            </div>
-         </nav>
-       </header>
         <main>
             <p id="notice">Signed out successfully.</p>
             <div class="container">
@@ -47,7 +17,7 @@
                             </div>
                             <div class="row">
                               <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
-                              <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                              <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
                             </div>
                         </div>
                     </div>
