--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <head>
-        <link rel="stylesheet" media="all" data-turbolinks-track="reload">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
         <style type="text/css"></style>
         <title>Bookers2Ver2</title>
@@ -11,6 +11,53 @@
         <%= csp_meta_tag %>
         <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     </head>
-    
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <span>Bookers</span>
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                    <% if user_signed_in? %>
+                        <li>
+                          <%= link_to 'Home', user_path(current_user.id) %>
+                        </li>
+                        <li>
+                          <%= link_to 'Users', users_path %>    
+                        </li>
+                        <li>
+                          <%= link_to 'Books', books_path %>    
+                        </li>
+                        <li>
+                          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                        </li>
+                    <% else %>
+                        <li>
+                          <%= link_to 'Home', root_path %>
+                        </li>
+                        <li>
+                          <%= link_to 'About', about_path %>    
+                        </li>
+                        <li>
+                          <%= link_to "Sign up", new_user_registration_path %>
+                        </li>
+                        <li>
+                          <%= link_to "Log in", new_user_session_path %>
+                        </li>
+                    <% end %>
+                    </ul>
+                </div>
+            </div>
+            </nav>
+        </header>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </body>
   <%= yield %>
 </html>
