--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,73 +1,43 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Bookers2Ver2</title>
-        <meta name="csrf-param" content="authenticity_token">
-        <meta name="csrf-token">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
-        <style type="text/css"></style>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    </head>
     <body>
-        <header>
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <span>Bookers</span>
-                </a>
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto">
-                    <li><a class="nav-link text-light" href="/"><i class="fa-solid fa-house"></i>Home</a></li>
-                    <li><a class="nav-link text-light" href="/users"><i class="fa-solid fa-users"></i>Users</a></li>
-                    <li><a class="nav-link text-light" href="/users/sign_up"><i class="fa-solid fa-user-plus"></i>Sign up</a></li>
-                    <li><a class="nav-link text-light" href="/users/log_in"><i class="fa-solid fa-right-to-bracket"></i>Log in</a></li>
-                  </ul>
-                </div>
-            </div>
-          </nav>
-        </header>
-        <main>
-            <p id="notice">Welcome! You have signed up successfully.</p>
+       <main>
             <div class="container px-5 px-sm-0">
-                <div class="row">
-                    <h2>User info</h2>
-                    <table class="table">
-                        <tbody>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                        </tbody>
-                    </table>
-                    <div class="row">
-                    </div>
-                    <h2 class="mt-3">New book</h2>
-                    <% if @book.errors.any? %>
-                      <%= @book.errors.count %>errors prohibited this obj from being saved:
-                      <ul>
-                        <% @book.errors.full_messages.each do |message| %>
-                          <li><%= message %></li>
-                        <%end %>
-                      </ul>
-                    <% end %>
-                    <%= form_with model: @book do |f| %>
-                        <h4>Title</h4>
-                          <%= f.text_field :title %>
-                        <h4>Opinion</h4>
-                          <%= f.text_area :body %>
-                        <%= f.submit 'Create book' %>
-                    <% end %>
-                </div>
+              <div class="row">
+                  <div class="col-md-3">
+                   <%= render 'books/list', books: @books %>
+                  </div>
+                  <div class="col-md-8 offset-md-1">
+                     <% @books.each do |book| %>
+                      <h2>Users</h2>
+                        <% @users.each do |user| %>
+                         <table class="table">
+                           <thead>
+                             <tr>
+                               <th>image<br>
+                               <th>name</th>
+                               <th colspan="3"></th>
+                             </tr>
+                           </thead>
+                           <tbody>
+                             <tr>
+                               <td><%= image_tag user.get_profile_image(80,80)%></td>
+                               <td><%= user.name %></td>
+                               <td><%= link_to 'Show', edit_user_path(@user) %></td>
+                             </tr>
+                           </tbody>
+                         </table>
+                        <%end%>
+                     <%end%>
+                  </div>
+              </div>
             </div>
-        </main>
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>    
+       </main>
+       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </body>
     <footer>
         <div class="container mt-5">
           <div class="row">
