--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -6,7 +6,7 @@
               <table class="table table-striped">
                 <tbody>
                     <tr><th>name</th><th><%= user.name %></th></tr>
-                    <tr><th>introduction</th><th></th></tr>
+                    <tr><th>introduction</th><th><%= user.introduction %></th></tr>
                 </tbody>
               </table>
               
@@ -33,7 +33,7 @@
                    <%= f.text_area :body %>
                  </div>
                  <div class="form group">
-                   <%= f.submit 'Create book', class: "btn btn-success"%>
+                   <%= f.submit 'Create Book', class: "btn btn-success"%>
                  </div>
                 <% end %>
         </div>
