--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form group">
                           <label for="inputName">Introduction</label><br>
-                          <%= f.text_area :name, autofocus: true, placeholder:"説明"%>
+                          <%= f.text_area :introduction, autofocus: true, placeholder:"説明"%>
                         </div>
                         <%= f.submit 'Update User', class: "btn btn-secondary"%>
                       <% end %>
