--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,10 +7,9 @@
             <div class="container px-5 px-sm-0">
                 <div class="row">
                     <div class="col-md-3">
-                      <%= render 'list', books: @books, book: @book %>
+                      <%= render 'list', books: @books, book: @book, user: @user %>
                     </div>
                     <div class="col-md-8 offset-md-1">
-                     <% @books.each do |book| %>
                       <h2>Books</h2>
                          <table class="table table-hover table-inverse">
                            <thead>
@@ -21,6 +20,7 @@
                                <th colspan="3"></th>
                              </tr>
                            </thead>
+                           <% @books.each do |book| %>
                            <tbody>
                              <tr>
                                <td></td>
@@ -29,8 +29,8 @@
                                <td colspan="3"></td>
                              </tr>
                            </tbody>
+                           <%end%>
                          </table>
-                     <%end%>
                     </div>
                 </div>
             </div>
