--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
             <div class="container px-5 px-sm-0">
                 <div class="row">
                     <div class="col-md-3">
-                      <%= render 'list', books: @books, book: @book, user: @user %>
+                      <%= render 'list', book: @book, user: @user %>
                     </div>
                     <div class="col-md-8 offset-md-1">
                       <h2>Books</h2>
@@ -23,8 +23,12 @@
                            <% @books.each do |book| %>
                            <tbody>
                              <tr>
-                               <td></td>
-                               <td><%= link_to book.title, book_path(@user) %></td>
+                            　　<td>
+                                   <%= link_to user_path(book.user.id) do %>
+                                    　<%= image_tag book.user.get_profile_image(100,100) %>
+                                 　<% end %>
+                            　　</td>
+                               <td><%= link_to book.title, book_path(book) %></td>
                                <td><%= book.body %></td>
                                <td colspan="3"></td>
                              </tr>
