--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,11 +22,11 @@
                                          <%= @user.name %>
                                        <%end%>
                                    </td>
-                                   <td><%= link_to @book.title, book_path %></td>
+                                   <td><%= link_to @book.title, book_path(@user) %></td>
                                    <td><%= @book.body %></td>
-                                   <% if @user=current_user.id %>
-                                    <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-                                    <td><%= link_to 'Destroy', books_path, method: :delete, class: "btn  btn-sm btn-danger", "data-confirm" => "本当に消しますか？"%></td>
+                                   <% if @book.user_id == current_user.id %>
+                                        <td><%= link_to 'Edit', edit_book_path(@user), class: "btn btn-sm btn-success" %></td>
+                                        <td><%= link_to 'Destroy', book_path(@book), method: :delete, class: "btn  btn-sm btn-danger", "data-confirm" => "本当に消しますか？"%></td>
                                    <%end%>
                                  </tr>
                                </tbody>
