--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,15 @@
             <div class="row">
               <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
                 <h2>User info</h2>
-                      <%= form_with model: @user, url:edit_user_path(@user.id) do |f| %>
+                      <% if @user.errors.any? %>
+                        <%= @user.errors.count %>error prohibited this obj from being saved:
+                        <ul>
+                          <% @user.errors.full_messages.each do |message| %>
+                            <li><%= message %></li>
+                          <% end %>
+                        </ul>
+                      <% end %>
+                      <%= form_with model: @user, method: :patch do |f| %>
                         <div class="form group">
                           <label for="inputName">Name</label><br>
                           <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
